--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "mongodb": "^5.7.0",
     "mongoose": "^7.4.3",
     "morgan": "1.10.0",
-    "nanoid": "3.0.0"
+    "nanoid": "3.0.0",
+    "passport": "^0.6.0",
+    "passport-jwt": "^4.0.1"
   },
   "devDependencies": {
     "eslint": "7.19.0",
